--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,5 +39,5 @@
 
 .bg-gradient-proyectos{
   background: rgb(50,66,152);
-  background: linear-gradient(45deg, rgba(50,66,152,0.9220063025210083) 18%, rgba(168,62,84,1) 100%);
+  background: linear-gradient(45deg, rgba(50,66,152,0.9220063025210083) 18%, rgba(168,62,84,0.8463760504201681) 100%);
 }
